--- a/app/views/responders/edit.html.erb
+++ b/app/views/responders/edit.html.erb
@@ -1,164 +1,244 @@
 <div class="row wrapper border-bottom white-bg page-heading">
-  <div class="col-sm-4">
-    <h2>Responder Profile</h2>
+  <div class="col-lg-10">
+    <h2>Profile</h2>
     <ol class="breadcrumb">
       <li>
-        <a href="<%= url_for :controller => 'dashboards', :action => 'dashboard_1' %>">Settings</a>
+        <a href="<%= url_for :controller => 'dashboards', :action => 'dashboard_1' %>">Home</a>
+      </li>
+      <li>
+        <a>App views</a>
       </li>
       <li class="active">
         <strong>Profile</strong>
       </li>
     </ol>
   </div>
+  <div class="col-lg-2">
+  </div>
 </div>
-<div class="row">
-  <div class="col-md-6">
-    <div class="ibox float-e-margins">
-      <div class="ibox-title">
-        <h5>Location Settings
-          <small class="m-l-sm"></small>
-        </h5>
-        <div class="ibox-content">
-          <div class="zipcode-display" id="zipcode-display">
-            <%= simple_form_for current_responder, class: 'form-inline' do |f| %>
-              <div class="form-group" id="responder_zipcode">
-                <%= f.input :zipcode,
-                            label: false,
-                            class: 'form-control sr-only',
-                            id: 'zipcode-input', input_html: {pattern: '[0-9]{4}'}, placeholder: current_responder.zipcode || '' %>
-              </div>
-              <div class="text-error"></div>
-              <div id="city-state"></div>
-              <%= f.submit 'Update Zipcode', class: 'btn btn-white' %>
+<div class="wrapper wrapper-content">
+  <div class="row animated fadeInRight">
+    <div class="col-md-4">
+      <div class="ibox float-e-margins">
+        <div class="ibox-title">
+          <h5>Profile Detail</h5>
+        </div>
+        <div>
+          <div class="ibox-content no-padding border-left-right">
+
+            <% if current_responder.avatar.attached? %>
+              <img alt="image"
+                   class="img-responsive"
+                   src="<%= image_path(url_for(current_responder.avatar)) %>">
+            <% else %>
+              <img alt="image" class="img-responsive" src="<%= image_path('defaults/default-profile-2.png') %>">
             <% end %>
+            <button class="btn btn-primary btn-block">
+              <i class="fas fa-camera"></i> Update Photo
+            </button>
           </div>
-          <!--<div class="ibox-footer">-->
-          <!--<span class="pull-right">-->
-          <!--The righ side of the footer-->
-          <!--</span>-->
-          <!--This is simple footer example-->
-          <!--</div>-->
+          <div class="ibox-content profile-content">
+            <h4><strong><%= current_responder.full_name %></strong></h4>
+            <!--            <p><i class="fa fa-map-marker"></i> Riviera State 32/106</p>-->
+            <!-- Update Zipcode-->
+            <div class="input-group">
+              <%= simple_form_for current_responder, wrapper: :vertical_form,
+                                  wrapper_mappings: {
+                                      check_boxes: :horizontal_radio_and_checkboxes,
+                                      radio_buttons: :horizontal_radio_and_checkboxes,
+                                      file: :horizontal_file_input,
+                                      boolean: :horizontal_boolean
+                                  } do |f| %>
+                <div class="form-inputs">
+                  <%= f.input :zipcode,
+                              class: "form-control",
+                              label: false,
+                              id: 'zipcode-input responder_zipcode',
+                              input_html: {pattern: '[0-9]{4}'},
+                              placeholder: current_responder.zipcode || '' %>
+
+                  <%= f.submit "Update", class: 'btn btn-xs' %>
+                  <div class="text-error"></div>
+                  <div id="city-state"></div>
+              <% end %>
+              </div>
+              <!--              <div class="row m-t-lg">-->
+              <!--                <div class="col-md-4">-->
+              <!--                  <span class="bar">5,3,9,6,5,9,7,3,5,2</span>-->
+              <!--                  <h5><strong>169</strong> Posts</h5>-->
+              <!--                </div>-->
+              <!--                <div class="col-md-4">-->
+              <!--                  <span class="line">5,3,9,6,5,9,7,3,5,2</span>-->
+              <!--                  <h5><strong>28</strong> Following</h5>-->
+              <!--                </div>-->
+              <!--                <div class="col-md-4">-->
+              <!--                  <span class="bar">5,3,2,-1,-3,-2,2,3,5,2</span>-->
+              <!--                  <h5><strong>240</strong> Followers</h5>-->
+              <!--                </div>-->
+              <!--              </div>-->
+              <div class="user-button">
+                <!--                <div class="row">-->
+                <!--                  <div class="col-md-6">-->
+                <!--                    <button type="button" class="btn btn-primary btn-sm btn-block"><i class="fa fa-envelope"></i> Send-->
+                <!--                      Message-->
+                <!--                    </button>-->
+                <!--                  </div>-->
+                <!--                  <div class="col-md-6">-->
+                <!--                    <button type="button" class="btn btn-default btn-sm btn-block"><i class="fa fa-coffee"></i> Buy a-->
+                <!--                      coffee-->
+                <!--                    </button>-->
+                <!--                  </div>-->
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="col-md-6">
-    <div class="ibox float-e-margins">
-      <div class="ibox-title">
-        <h5>Personal Information
-          <small class="m-l-sm"></small>
-        </h5>
-        <!--<div class="ibox-tools">-->
-        <!--<a class="collapse-link">-->
-        <!--<i class="fa fa-chevron-up"></i>-->
-        <!--</a>-->
-        <!--<a class="dropdown-toggle" data-toggle="dropdown" href="#">-->
-        <!--<i class="fa fa-wrench"></i>-->
-        <!--</a>-->
-        <!--<ul class="dropdown-menu dropdown-user">-->
-        <!--<li><a href="#">Config option 1</a>-->
-        <!--</li>-->
-        <!--<li><a href="#">Config option 2</a>-->
-        <!--</li>-->
-        <!--</ul>-->
-        <!--<a class="close-link">-->
-        <!--<i class="fa fa-times"></i>-->
-        <!--</a>-->
-        <!--</div>-->
+    <div class="col-md-8">
+      <div class="ibox float-e-margins">
+        <div class="ibox-title">
+          <h5>Primary Certifications</h5>
+          <button class="pull-right"><i class="fa fa-plus"></i> Add</button>
+        </div>
         <div class="ibox-content">
           <div>
-            <%= simple_form_for current_responder, class: 'form-inline' do |f| %>
-              <div class="form-group">
-                <%= f.input :first_name,
-                            class: 'form-control sr-only',
-                            placeholder: current_responder.first_name || '' %>
-              </div>
-              <div>
-                <%= f.input :last_name,
-                            class: 'form-control sr-only',
-                            placeholder: current_responder.last_name || '' %>
-              </div>
-              <div class="text-error"></div>
-              <div id="city-state"></div>
-              <%= f.button :button, class: 'btn btn btn-info btn-trans' do %>
-                <i class='fas fa-save'></i>
-                Save
-              <% end %>
+            <div class="feed-activity-list">
+              <!--              //-->
 
-            <% end %>
+              <div class="feed-element">
+                <a href="#" class="pull-left">
+                  <img alt="image" class='img-circle' src="<%= image_path('patches/nremt.jpg') %>">
+                  <strong>NR EMT # 12345 </strong>
+                </a>
+                <div class="media-body ">
+
+                </div>
+              </div>
+
+              <!--              //-->
+              <div class="feed-element">
+                <a href="#" class="pull-left">
+                  <img alt="image" class='img-circle' src="<%= image_path('patches/nj-emt.png') %>">
+                  <strong>NJ EMT # 586908 </strong>
+                </a>
+                <div class="media-body ">
+
+                </div>
+              </div>
+
+              <div class="feed-element">
+                <a href="#" class="pull-left">
+                  <img alt="image" class='img-circle' src="<%= image_path('patches/nj-micu.png') %>">
+                  <strong>NJ MICP # 101012 </strong>
+                </a>
+                <div class="media-body ">
+
+                </div>
+              </div>
+
+              <div class="feed-element">
+                <a href="#" class="pull-left">
+                  <img alt="image" class='img-circle' src="<%= image_path('patches/nj-ff.jpg') %>">
+                  <strong>NJ Fire Fighter # 54321 </strong>
+                </a>
+                <div class="media-body ">
+
+                </div>
+              </div>
+              <!-- END OF CERTS //-->
+            </div>
           </div>
-          <!--<div class="ibox-footer">-->
-          <!--<span class="pull-right">-->
-          <!--The right side of the footer-->
-          <!--</span>-->
-          <!--This is simple footer example-->
-          <!--</div>-->
         </div>
       </div>
     </div>
   </div>
-</div>
-</div>
-<script type="text/javascript">//<![CDATA[
-$(function () {
-    var clientKey = 'js-or5260CuimzMSvL9uJwRcTOO4rfCbywW4HhEWe2z59GgZr6iF6RjFJux57zZyTnX';
-    // var clientKey = "thmAfmVjv2OcZRh8Cf62K7wxUp42bE6fN8F6D2YQ9TBudxInnimucRPaCYia9zd2";
 
-    var cache = {};
-    var container = $("#zipcode-display");
-    var errorDiv = container.find("div.text-error");
+  <% content_for :javascript do %>
+    <script type="text/javascript">//<![CDATA[
+    $(function () {
+        var clientKey = 'js-or5260CuimzMSvL9uJwRcTOO4rfCbywW4HhEWe2z59GgZr6iF6RjFJux57zZyTnX';
+        // var clientKey = "thmAfmVjv2OcZRh8Cf62K7wxUp42bE6fN8F6D2YQ9TBudxInnimucRPaCYia9zd2";
 
-    /** Handle successful response */
-    function handleResp(data) {
-        // Check for error
-        if (data.error_msg)
-            errorDiv.text(data.error_msg);
-        else if ("city" in data) {
-            // Set city and state
-            container.find("#city-state").text(data.city + ',' + data.state);
-            // container.find("input[name='state']").val(data.state);
-        }
-    }
+        var cache = {};
+        var container = $("#zipcode-display");
+        var errorDiv = container.find("div.text-error");
 
-    // Set up event handlers
-    $('#responder_zipcode').on("keyup change", function () {
-        // Get zip code
-        var zipcode = $(this).val().substring(0, 5);
-        if (zipcode.length == 5 && /^[0-9]+$/.test(zipcode)) {
-            // Clear error
-            errorDiv.empty();
-
-            // Check cache
-            if (zipcode in cache) {
-                handleResp(cache[zipcode]);
+        /** Handle successful response */
+        function handleResp(data) {
+            // Check for error
+            if (data.error_msg)
+                errorDiv.text(data.error_msg);
+            else if ("city" in data) {
+                // Set city and state
+                container.find("#city-state").text(data.city + ',' + data.state);
+                // container.find("input[name='state']").val(data.state);
             }
-            else {
-                // Build url
-                var url = "https://www.zipcodeapi.com/rest/" + clientKey + "/info.json/" + zipcode + "/radians";
+        }
 
-                // Make AJAX request
-                $.ajax({
-                    "url": url,
-                    "dataType": "json"
-                }).done(function (data) {
-                    handleResp(data);
+        // Set up event handlers
+        $('#responder_zipcode').on("keyup change", function () {
+            // Get zip code
+            var zipcode = $(this).val().substring(0, 5);
+            if (zipcode.length == 5 && /^[0-9]+$/.test(zipcode)) {
+                // Clear error
+                errorDiv.empty();
 
-                    // Store in cache
-                    cache[zipcode] = data;
-                }).fail(function (data) {
-                    if (data.responseText && (json = $.parseJSON(data.responseText))) {
+                // Check cache
+                if (zipcode in cache) {
+                    handleResp(cache[zipcode]);
+                }
+                else {
+                    // Build url
+                    var url = "https://www.zipcodeapi.com/rest/" + clientKey + "/info.json/" + zipcode + "/radians";
+
+                    // Make AJAX request
+                    $.ajax({
+                        "url": url,
+                        "dataType": "json"
+                    }).done(function (data) {
+                        handleResp(data);
+
                         // Store in cache
-                        cache[zipcode] = json;
+                        cache[zipcode] = data;
+                    }).fail(function (data) {
+                        if (data.responseText && (json = $.parseJSON(data.responseText))) {
+                            // Store in cache
+                            cache[zipcode] = json;
 
-                        // Check for error
-                        if (json.error_msg)
-                            errorDiv.text(json.error_msg);
-                    }
-                    else
-                        errorDiv.text('Request failed.');
-                });
+                            // Check for error
+                            if (json.error_msg)
+                                errorDiv.text(json.error_msg);
+                        }
+                        else
+                            errorDiv.text('Request failed.');
+                    });
+                }
             }
-        }
-    }).trigger("change");
-});
-//]]></script>
+        }).trigger("change");
+    });
+    </script>
+    <script type="text/javascript">
+
+
+        $(function () {
+
+            $("span.pie").peity("pie", {
+                fill: ['#446CB3', '#d7d7d7', '#ffffff']
+            })
+
+            $(".line").peity("line", {
+                fill: '#446CB3',
+                stroke: '#169c81',
+            })
+
+            $(".bar").peity("bar", {
+                fill: ["#446CB3", "#d7d7d7"]
+            })
+
+
+        });
+
+    </script>
+
+  <% end %>
+
